cks/NetworkPolicy/np.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example
  namespace: default
spec:
  podSelector:
    matchLabels:
      id: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              id: ns1
      ports:
        - protocol: TCP
          port: 80
    - to:
        - podSelector:
            matchLabels:
              id: backend
